progress Warning = yelow black bottom, collapse stage button clash fixed

--- a/src/components/progressBar/ProgressBar.css
+++ b/src/components/progressBar/ProgressBar.css
@@ -19,7 +19,8 @@
 
   .progress-warning {
     border-radius: 8px;
-    background-color: rgb(204, 123, 91);
+    border-bottom: 2px solid black;
+    background-color: rgb(255, 205, 41);
     float: left;
     width: 0%;
     height: 80%;
